; ModuleID = '/home/carl/AnghaBench/git/extr_column.c_finalize_colopts.c'
source_filename = "/home/carl/AnghaBench/git/extr_column.c_finalize_colopts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@COL_ENABLE_MASK = common dso_local global i32 0, align 4
@COL_AUTO = common dso_local global i32 0, align 4
@COL_ENABLED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @finalize_colopts(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @COL_ENABLE_MASK, align 4
  %8 = and i32 %6, %7
  %9 = load i32, i32* @COL_AUTO, align 4
  %10 = icmp eq i32 %8, %9
  br i1 %10, label %11, label %33

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %11
  %15 = call i32 @isatty(i32 1)
  store i32 %15, i32* %4, align 4
  br label %16

16:                                               ; preds = %14, %11
  %17 = load i32, i32* @COL_ENABLE_MASK, align 4
  %18 = xor i32 %17, -1
  %19 = load i32*, i32** %3, align 8
  %20 = load i32, i32* %19, align 4
  %21 = and i32 %20, %18
  store i32 %21, i32* %19, align 4
  %22 = load i32, i32* %4, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %27, label %24

24:                                               ; preds = %16
  %25 = call i64 (...) @pager_in_use()
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %32

27:                                               ; preds = %24, %16
  %28 = load i32, i32* @COL_ENABLED, align 4
  %29 = load i32*, i32** %3, align 8
  %30 = load i32, i32* %29, align 4
  %31 = or i32 %30, %28
  store i32 %31, i32* %29, align 4
  br label %32

32:                                               ; preds = %27, %24
  br label %33

33:                                               ; preds = %32, %2
  ret i32 0
}

declare dso_local i32 @isatty(i32) #1

declare dso_local i64 @pager_in_use(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
